--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,6 @@
-
+@import "core/variables.scss";
+@import "componentes/buttons.scss";
+@import "componentes/typography.scss";
+@import "layout/footer.scss";
+@import "layout/header.scss";
+@import "pages/home.scss";
